# MyMusic

./: README.md
app/: build.gradle
app/src/androidTest/java/com/zxsong/media/mymusic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zxsong/media/mymusic/: MainActivity.java
app/src/main/java/com/zxsong/media/mymusic/utils/: PermissionUtils.java  TimeUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zxsong/media/mymusic/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
myplayer/: CMakeLists.txt  build.gradle
myplayer/src/androidTest/java/com/zxsong/media/myplayer/: ExampleInstrumentedTest.java
myplayer/src/main/: AndroidManifest.xml
myplayer/src/main/cpp/: AndroidLog.h  XsAudio.cpp  XsAudio.h  XsCallJava.cpp  XsCallJava.h  XsFFmpeg.cpp  XsFFmpeg.h  XsPlaystatus.cpp  XsPlaystatus.h  XsQueue.cpp  XsQueue.h  XsVideo.cpp  XsVideo.h  native-lib.cpp
myplayer/src/main/cpp/include/libavcodec/: avcodec.h
myplayer/src/main/cpp/include/libavutil/: frame.h
myplayer/src/main/java/com/zxsong/media/myplayer/: Demo.java
myplayer/src/main/java/com/zxsong/media/myplayer/bean/: TimeInfoBean.java
myplayer/src/main/java/com/zxsong/media/myplayer/listener/: OnCompleteListener.java  OnErrorListener.java  OnLoadListener.java  OnPauseResumeListener.java  OnPreparedListener.java  OnTimeInfoListener.java
myplayer/src/main/java/com/zxsong/media/myplayer/opengl/: XsGLSurfaceView.java  XsRender.java  XsShaderUtil.java
myplayer/src/main/java/com/zxsong/media/myplayer/player/: XsPlayer.java
myplayer/src/main/java/com/zxsong/media/myplayer/util/: XsVideoSupportUtil.java
myplayer/src/test/java/com/zxsong/media/myplayer/: ExampleUnitTest.java
